--- a/2015/_assets/stylesheets/_publications.scss
+++ b/2015/_assets/stylesheets/_publications.scss
@@ -1,5 +1,5 @@
 .publication {
-    
+
     min-height: 180px;
     margin-bottom:1em;
 
@@ -8,6 +8,7 @@
         padding:5px;
         border:solid 1px #555;
         margin-right:10px;
+        max-height:150px;
     }
 
     .pub-title {
